recursion.logo.lessons.recursion.logo.square.FourSquare.scala.error
FourSquare:2: error: not found: type double
  	var nbPas : double = 100.00;
                    ^FourSquare:3: error: not found: type double
  var angle : double = 90.00;
              ^FourSquare:6: error: too many arguments for method getY: ()Double
  getY(angle);
      ^FourSquare:8: error: too many arguments for method getY: ()Double
  getY(angle);
      ^FourSquare:10: error: too many arguments for method getY: ()Double
	getY(angle);
            ^FourSquare:12: error: too many arguments for method getY: ()Double
  getY(2*angle);
      ^FourSquare:15: error: too many arguments for method getY: ()Double
  getY(angle);
      ^FourSquare:17: error: too many arguments for method getY: ()Double
  getY(angle);
      ^FourSquare:19: error: too many arguments for method getY: ()Double
	getY(angle);
            ^FourSquare:21: error: too many arguments for method getY: ()Double
  getY(2*angle);
      ^FourSquare:24: error: too many arguments for method getY: ()Double
  getY(angle);
      ^FourSquare:26: error: too many arguments for method getY: ()Double
  getY(angle);
      ^FourSquare:28: error: too many arguments for method getY: ()Double
	getY(angle);
            ^FourSquare:30: error: too many arguments for method getY: ()Double
  getY(2*angle);
      ^FourSquare:33: error: too many arguments for method getY: ()Double
  getY(angle);
      ^FourSquare:35: error: too many arguments for method getY: ()Double
  getY(angle);
      ^FourSquare:37: error: too many arguments for method getY: ()Double
	getY(angle);
            ^FourSquare:39: error: too many arguments for method getY: ()Double
  getY(2*angle);
      ^