recursion.logo.lessons.recursion.logo.square.FourSquare.scala.code
override def run() {
  	var nbPas : double = 100.00;
  var angle : double = 90.00;
  
  avance(nbPas);
  getY(angle);
  avance(nbPas);
  getY(angle);
  avance(nbPas);
	getY(angle);
  avance(nbPas);
  getY(2*angle);
  
  avance(nbPas);
  getY(angle);
  avance(nbPas);
  getY(angle);
  avance(nbPas);
	getY(angle);
  avance(nbPas);
  getY(2*angle);
  
  avance(nbPas);
  getY(angle);
  avance(nbPas);
  getY(angle);
  avance(nbPas);
	getY(angle);
  avance(nbPas);
  getY(2*angle);
  
  avance(nbPas);
  getY(angle);
  avance(nbPas);
  getY(angle);
  avance(nbPas);
	getY(angle);
  avance(nbPas);
  getY(2*angle);
}
